test/errors/list/remove_value_error.np
l = [1]
l.remove(2)
